--- a/demo/components/MarkdownSampleShort.mdx
+++ b/demo/components/MarkdownSampleShort.mdx
@@ -7,7 +7,7 @@ The `@tailwindcss/typography` plugin is our attempt to give you what you _actual
 
 > Why is Tailwind removing the default styles on my `h1` elements? How do I disable this? What do you mean I lose all the other base styles too?
 
-<div className="not-prose">
+<div className="not-format">
   <h2>Shouldn't be colored</h2>
 </div>
 
